--- a/rede/arquivos/Dashboard Rede Filtrado.html
+++ b/rede/arquivos/Dashboard Rede Filtrado.html
@@ -1,4 +1,4 @@
 <map name="GraffleExport">
-	<area shape=rect coords="1083,84,1222,119" href="Dashboard%20Rede%20Filtros.html">
+	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Filtrado.jpg" usemap="#GraffleExport">
