--- a/rede/arquivos/Dashboard Rede.html
+++ b/rede/arquivos/Dashboard Rede.html
@@ -1,5 +1,12 @@
 <map name="GraffleExport">
-	<area shape=rect coords="1083,84,1222,119" href="Dashboard%20Rede%20Filtros.html">
-	<area shape=poly coords="350,109,342,122,334,109,350,109" href="Dropdown%20Rede.html">
+	<area shape=rect coords="758,1171,974,1198" href="Dashboard%20lightbox.html">
+	<area shape=rect coords="267,1677,800,1715" href="Dashboard%20Rede%20Ver%20Mais.html">
+	<area shape=rect coords="48,1659,966,1737" href="Dashboard%20Rede%20Ver%20Mais.html">
+	<area shape=poly coords="951,1225,942,1238,934,1225,951,1225" href="Dashboard%20ordena%C3%A7%C3%A3o.html">
+	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20Rede.html">
+	<area shape=rect coords="633,1194,966,1269" href="Dashboard%20ordena%C3%A7%C3%A3o.html">
+	<area shape=poly coords="350,92,342,104,334,92,350,92" href="Dropdown%20Rede.html">
+	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
+	<area shape=rect coords="850,73,989,108" href="Dashboard%20Rede%20Filtros.html">
 </map>
 <img border=0 src="Dashboard%20Rede.jpg" usemap="#GraffleExport">
