--- a/rede/arquivos/Dropdown Rede.html
+++ b/rede/arquivos/Dropdown Rede.html
@@ -1,4 +1,6 @@
 <map name="GraffleExport">
-	<area shape=poly coords="334,122,342,109,350,122,334,122" href="Dashboard%20Rede.html">
+	<area shape=rect coords="633,1194,966,1269" href="Dashboard%20ordena%C3%A7%C3%A3o.html">
+	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
+	<area shape=poly coords="334,108,342,95,350,108,334,108" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dropdown%20Rede.jpg" usemap="#GraffleExport">
