--- a/rede/arquivos/Dashboard Rede Filtrado.html
+++ b/rede/arquivos/Dashboard Rede Filtrado.html
@@ -1,4 +1,5 @@
 <map name="GraffleExport">
+	<area shape=poly coords="366,91,358,104,350,91,366,91" href="Dashboard%20Rede.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Filtrado.jpg" usemap="#GraffleExport">
