--- a/rede/arquivos/Dashboard Rede Filtros.html
+++ b/rede/arquivos/Dashboard Rede Filtros.html
@@ -1,4 +1,5 @@
 <map name="GraffleExport">
+	<area shape=poly coords="366,91,358,104,350,91,366,91" href="Dashboard%20Rede.html">
 	<area shape=rect coords="614,241,708,275" href="Dashboard%20Rede%20Filtrado.html">
 	<area shape=poly coords="570,261,576,268,581,261,570,261" href="Dashboard%20Rede%20Filtros%20Escolas.html">
 	<area shape=rect coords="416,253,588,274" href="Dashboard%20Rede%20Filtros%20Escolas.html">
