--- a/rede/arquivos/Dashboard Rede Ver Mais.html
+++ b/rede/arquivos/Dashboard Rede Ver Mais.html
@@ -1,7 +1,7 @@
 <map name="GraffleExport">
+	<area shape=poly coords="366,91,358,104,350,91,366,91" href="Dashboard%20Rede.html">
 	<area shape=rect coords="267,2065,800,2103" href="Dashboard%20Rede.html">
 	<area shape=rect coords="48,2047,966,2125" href="Dashboard%20Rede.html">
-	<area shape=poly coords="350,92,342,104,334,92,350,92" href="Dropdown%20Rede.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Ver%20Mais.jpg" usemap="#GraffleExport">
