--- a/rede/arquivos/Dropdown Rede.html
+++ b/rede/arquivos/Dropdown Rede.html
@@ -1,6 +1,7 @@
 <map name="GraffleExport">
 	<area shape=rect coords="633,1194,966,1269" href="Dashboard%20ordena%C3%A7%C3%A3o.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
-	<area shape=poly coords="334,108,342,95,350,108,334,108" href="Dashboard%20Rede.html">
+	<area shape=rect coords="80,198,329,252" href="Dashboard%20Rede%20Filtrado.html">
+	<area shape=poly coords="350,104,358,91,366,104,350,104" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dropdown%20Rede.jpg" usemap="#GraffleExport">
