--- a/escola/arquivos/Dashboard Escola Engajamento.html
+++ b/escola/arquivos/Dashboard Escola Engajamento.html
@@ -1,6 +1,6 @@
 <map name="GraffleExport">
-	<area shape=rect coords="756,1171,972,1198" href="Dashboard%20Escola%20Engajamento.html">
-	<area shape=rect coords="760,1137,994,1177" href="Dashboard%20Escola%20Engajamento.html">
+	<area shape=poly coords="924,189,949,163,975,189,949,215,924,189" href="Dashboard%20Escola.html">
+	<area shape=rect coords="0,0,1025,1922" href="Email%20Escola.html">
 	<area shape=rect coords="265,1677,798,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="46,1659,964,1737" href="Filtros%20Escola.html">
 	<area shape=poly coords="948,1225,940,1238,932,1225,948,1225" href="Filtros%20aplicados%20escola.html">
@@ -9,4 +9,4 @@
 	<area shape=rect coords="-2,1,1022,46" href="Dashboard%20Escola.html">
 	<area shape=rect coords="848,73,987,108" href="Filtros%20Escola.html">
 </map>
-<img border=0 src="Dashboard%20Escola.jpg" usemap="#GraffleExport">
+<img border=0 src="Dashboard%20Escola%20Engajamento.jpg" usemap="#GraffleExport">
