--- a/escola/arquivos/Filtros Escola Disciplina.html
+++ b/escola/arquivos/Filtros Escola Disciplina.html
@@ -1,6 +1,6 @@
 <map name="GraffleExport">
-	<area shape=poly coords="413,278,419,285,424,278,413,278" href="Filtros%20Escola%20Ano.html">
-	<area shape=rect coords="258,270,431,292" href="Filtros%20Escola%20Ano.html">
+	<area shape=poly coords="842,282,847,289,853,282,842,282" href="Filtros%20Escola%20Aplicar.html">
+	<area shape=rect coords="687,274,859,296" href="Filtros%20Escola%20Aplicar.html">
 	<area shape=rect coords="895,266,989,300" href="Filtros%20aplicados%20escola.html">
 	<area shape=rect coords="267,1677,800,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="48,1659,966,1737" href="Filtros%20Escola.html">
@@ -9,4 +9,4 @@
 	<area shape=rect coords="633,1194,966,1269" href="Filtros%20aplicados%20escola.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
 </map>
-<img border=0 src="Filtros%20Escola.jpg" usemap="#GraffleExport">
+<img border=0 src="Filtros%20Escola%20Disciplina.jpg" usemap="#GraffleExport">
