--- a/escola/index.html
+++ b/escola/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=arquivos/EmailEscola.html"> 
+	<meta http-equiv="refresh" content="0; url=arquivos/Email.html"> 
 </head>
 </html>
