Ajustes realizados apos primeira analise

--- a/escola/arquivos/Dashboard Escola.html
+++ b/escola/arquivos/Dashboard Escola.html
@@ -1,11 +1,10 @@
 <map name="GraffleExport">
 	<area shape=rect coords="756,1171,972,1198" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="760,1137,994,1177" href="Dashboard%20Escola%20Engajamento.html">
-	<area shape=rect coords="265,1677,798,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="46,1659,964,1737" href="Filtros%20Escola.html">
-	<area shape=poly coords="948,1225,940,1238,932,1225,948,1225" href="Filtros%20aplicados%20escola.html">
+	<area shape=poly coords="948,1225,940,1238,932,1225,948,1225" href="Filtros%20aplicados%20turma.html">
 	<area shape=rect coords="887,1211,914,1238" href="Dashboard%20Escola.html">
-	<area shape=rect coords="631,1194,964,1269" href="Filtros%20aplicados%20escola.html">
+	<area shape=rect coords="631,1194,964,1269" href="Filtros%20aplicados%20turma.html">
 	<area shape=rect coords="-2,1,1022,46" href="Dashboard%20Escola.html">
 	<area shape=rect coords="848,73,987,108" href="Filtros%20Escola.html">
 </map>
