--- a/escola/arquivos/Filtros aplicados turma.html
+++ b/escola/arquivos/Filtros aplicados turma.html
@@ -1,6 +1,6 @@
 <map name="GraffleExport">
-	<area shape=rect coords="517,1365,572,1387" href="Assuntos%20dominados%20aluno.html">
+	<area shape=rect coords="534,1364,589,1386" href="Assuntos%20dominados%20aluno.html">
 	<area shape=rect coords="280,1354,601,1432" href="Assuntos%20dominados%20aluno.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
 </map>
-<img border=0 src="Filtros%20aplicados%20escola.jpg" usemap="#GraffleExport">
+<img border=0 src="Filtros%20aplicados%20turma.jpg" usemap="#GraffleExport">
