--- a/escola/arquivos/Filtros Escola.html
+++ b/escola/arquivos/Filtros Escola.html
@@ -1,12 +1,12 @@
 <map name="GraffleExport">
 	<area shape=poly coords="413,278,419,285,424,278,413,278" href="Filtros%20Escola%20Ano.html">
 	<area shape=rect coords="258,270,431,292" href="Filtros%20Escola%20Ano.html">
-	<area shape=rect coords="895,266,989,300" href="Filtros%20aplicados%20escola.html">
+	<area shape=rect coords="895,266,989,300" href="Filtros%20aplicados%20turma.html">
 	<area shape=rect coords="267,1677,800,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="48,1659,966,1737" href="Filtros%20Escola.html">
-	<area shape=poly coords="950,1225,942,1238,934,1225,950,1225" href="Filtros%20aplicados%20escola.html">
+	<area shape=poly coords="950,1225,942,1238,934,1225,950,1225" href="Filtros%20aplicados%20turma.html">
 	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20Escola.html">
-	<area shape=rect coords="633,1194,966,1269" href="Filtros%20aplicados%20escola.html">
+	<area shape=rect coords="633,1194,966,1269" href="Filtros%20aplicados%20turma.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
 </map>
 <img border=0 src="Filtros%20Escola.jpg" usemap="#GraffleExport">
