revisao apos consolidacao de feedbacks de gestores

--- a/rede/arquivos/Dashboard ordenação.html
+++ b/rede/arquivos/Dashboard ordenação.html
@@ -1,6 +1,9 @@
 <map name="GraffleExport">
+	<area shape=rect coords="790,74,979,114" href="Dashboard%20Rede%20Filtros.html">
 	<area shape=poly coords="367,92,359,105,351,92,367,92" href="Dashboard%20Rede.html">
-	<area shape=poly coords="658,1238,667,1225,675,1238,658,1238" href="Dashboard%20Rede.html">
+	<area shape=rect coords="103,74,479,123" href="Dropdown%20Rede.html">
+	<area shape=poly coords="908,1199,902,1208,896,1199,908,1199" href="Dashboard%20lightbox%20-%20engajamento.html">
+	<area shape=rect coords="751,1131,1000,1200" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="292,1194,692,1269" href="Dashboard%20Rede.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
