--- a/escola/arquivos/Dashboard Escola Engajamento.html
+++ b/escola/arquivos/Dashboard Escola Engajamento.html
@@ -1,11 +1,11 @@
 <map name="GraffleExport">
 	<area shape=poly coords="924,189,949,163,975,189,949,215,924,189" href="Dashboard%20Escola.html">
-	<area shape=rect coords="0,0,1025,1922" href="Email%20Escola.html">
+	<area shape=rect coords="0,2,1025,1924" href="Dashboard%20Escola.html">
 	<area shape=rect coords="265,1677,798,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="46,1659,964,1737" href="Filtros%20Escola.html">
-	<area shape=poly coords="948,1225,940,1238,932,1225,948,1225" href="Filtros%20aplicados%20turma.html">
+	<area shape=poly coords="948,1225,940,1238,932,1225,948,1225" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
 	<area shape=rect coords="887,1211,914,1238" href="Dashboard%20Escola.html">
-	<area shape=rect coords="631,1194,964,1269" href="Filtros%20aplicados%20turma.html">
+	<area shape=rect coords="631,1194,964,1269" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
 	<area shape=rect coords="-2,1,1022,46" href="Dashboard%20Escola.html">
 	<area shape=rect coords="848,73,987,108" href="Filtros%20Escola.html">
 </map>
