--- a/rede/arquivos/Dashboard Rede Filtrado.html
+++ b/rede/arquivos/Dashboard Rede Filtrado.html
@@ -1,5 +1,7 @@
 <map name="GraffleExport">
-	<area shape=poly coords="366,91,358,104,350,91,366,91" href="Dashboard%20Rede.html">
+	<area shape=rect coords="804,76,993,115" href="Dashboard%20Rede%20Filtros.html">
+	<area shape=poly coords="422,97,413,110,405,97,422,97" href="Dashboard%20Rede.html">
+	<area shape=rect coords="106,76,482,125" href="Dropdown%20Rede.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Filtrado.jpg" usemap="#GraffleExport">
