ajustes adicionais pos revisao do time

--- a/prototipo_escolas/arquivos/Filtros Escola Turma.html
+++ b/prototipo_escolas/arquivos/Filtros Escola Turma.html
@@ -1,5 +1,6 @@
 <map name="GraffleExport">
 	<area shape=rect coords="73,1291,322,1326" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
+	<area shape=rect coords="898,266,992,300" href="Filtros%20aplicados%201%C2%BA%20Ano%20GERAL.html">
 	<area shape=rect coords="475,348,494,372" href="Filtros%20Escola%20Disciplina.html">
 	<area shape=rect coords="267,1677,800,1715" href="Filtros%20Escola.html">
 	<area shape=rect coords="48,1659,966,1737" href="Filtros%20Escola.html">
