alteracoes pre feira de ciencias

--- a/prototipo_escolas/arquivos/Filtros aplicados 1º Ano GERAL.html
+++ b/prototipo_escolas/arquivos/Filtros aplicados 1º Ano GERAL.html
@@ -1,7 +1,9 @@
 <map name="GraffleExport">
 	<area shape=rect coords="806,73,995,112" href="Filtros%20Escola.html">
+	<area shape=rect coords="71,1378,320,1413" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
 	<area shape=rect coords="889,1298,916,1325" href="Dashboard%20Escola.html">
 	<area shape=rect coords="633,1281,966,1356" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
+	<area shape=rect coords="577,839,716,873" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
 	<area shape=poly coords="356,155,343,155,343,167,356,167,356,155,351,161,354,164,352,166,350,163,347,166,345,164,348,161,345,158,347,156,350,159,352,156,354,158,356,155,351,161" href="Dashboard%20Escola.html">
 </map>
