--- a/prototipo_redes/arquivos/Dashboard Rede Filtros.html
+++ b/prototipo_redes/arquivos/Dashboard Rede Filtros.html
@@ -1,6 +1,7 @@
 <map name="GraffleExport">
 	<area shape=rect coords="125,1354,374,1418" href="Dashboard%20Rede%20Filtrado.html">
 	<area shape=rect coords="292,244,443,283" href="Dashboard%20Rede.html">
+	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Filtros.jpg" usemap="#GraffleExport">
