--- a/prototipo_redes/arquivos/Dashboard Rede Ver Mais.html
+++ b/prototipo_redes/arquivos/Dashboard Rede Ver Mais.html
@@ -7,6 +7,7 @@
 	<area shape=rect coords="751,1131,1000,1200" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="267,2065,800,2103" href="Dashboard%20Rede.html">
 	<area shape=rect coords="48,2047,966,2125" href="Dashboard%20Rede.html">
+	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
 <img border=0 src="Dashboard%20Rede%20Ver%20Mais.jpg" usemap="#GraffleExport">
