--- a/prototipo_redes/arquivos/Dashboard Rede_InfoGrafico.html
+++ b/prototipo_redes/arquivos/Dashboard Rede_InfoGrafico.html
@@ -8,7 +8,7 @@
 	<area shape=rect coords="751,1131,1000,1200" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="267,1677,800,1715" href="Dashboard%20Rede%20Ver%20Mais.html">
 	<area shape=rect coords="48,1659,966,1737" href="Dashboard%20Rede%20Ver%20Mais.html">
-	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20Rede.html">
+	<area shape=rect coords="889,1211,916,1238" href="Dashboard%20lightbox%20-%20engajamento.html">
 	<area shape=rect coords="633,1194,966,1269" href="Dashboard%20ordena%C3%A7%C3%A3o.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
