--- a/prototipo_escolas/arquivos/Dashboard Escola.html
+++ b/prototipo_escolas/arquivos/Dashboard Escola.html
@@ -3,7 +3,10 @@
 	<area shape=rect coords="790,74,979,114" href="Filtros%20Escola.html">
 	<area shape=rect coords="756,1171,972,1198" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="760,1137,994,1177" href="Dashboard%20Escola%20Engajamento.html">
-	<area shape=rect coords="887,1211,914,1238" href="Dashboard%20Escola.html">
+	<area shape=poly coords="906,1199,900,1208,894,1199,906,1199" href="Dashboard%20Escola%20Engajamento.html">
+	<area shape=rect coords="749,1131,998,1200" href="Dashboard%20Escola%20Engajamento.html">
+	<area shape=rect coords="265,1677,798,1715" href="Dashboard%20Escola.html">
+	<area shape=rect coords="887,1211,914,1238" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="631,1194,964,1269" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
 	<area shape=rect coords="340,759,458,793" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
 	<area shape=rect coords="-2,1,1022,46" href="Dashboard%20Escola.html">
