--- a/prototipo_escolas/arquivos/Filtros aplicados 1º Ano 2.html
+++ b/prototipo_escolas/arquivos/Filtros aplicados 1º Ano 2.html
@@ -1,5 +1,5 @@
 <map name="GraffleExport">
-	<area shape=rect coords="93,1360,353,1432" href="Assuntos%20dominados%20aluno%20-%20geografia.html">
+	<area shape=rect coords="93,1360,353,1432" href="Assuntos%20dominados%20por%20aluno.html">
 	<area shape=rect coords="806,73,995,112" href="Filtros%20Escola.html">
 	<area shape=rect coords="375,1391,574,1437" href="Assuntos%20dominados%20por%20aluno.html">
 	<area shape=rect coords="518,1364,573,1386" href="Assuntos%20dominados%20por%20aluno.html">
@@ -7,5 +7,6 @@
 	<area shape=rect coords="577,839,716,873" href="Assuntos%20dominados%20por%20aluno.html">
 	<area shape=poly coords="800,1267,794,1277,788,1267,800,1267" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="772,1199,1021,1268" href="Dashboard%20Escola%20Engajamento.html">
+	<area shape=poly coords="356,155,343,155,343,167,356,167,356,155,351,161,354,164,352,166,350,163,347,166,345,164,348,161,345,158,347,156,350,159,352,156,354,158,356,155,351,161" href="Dashboard%20Escola.html">
 </map>
 <img border=0 src="Filtros%20aplicados%201%C2%BA%20Ano%202.jpg" usemap="#GraffleExport">
