--- a/prototipo_escolas/arquivos/Filtros aplicados 1º Ano C - GEOGRAFIA.html
+++ b/prototipo_escolas/arquivos/Filtros aplicados 1º Ano C - GEOGRAFIA.html
@@ -5,9 +5,11 @@
 	<area shape=rect coords="534,1364,589,1386" href="Assuntos%20dominados%20aluno%20-%20geografia.html">
 	<area shape=rect coords="302,1390,568,1403" href="Assuntos%20dominados%20aluno%20-%20geografia.html">
 	<area shape=rect coords="280,1354,601,1432" href="Assuntos%20dominados%20aluno%20-%20geografia.html">
-	<area shape=rect coords="679,1381,700,1416" href="aulas%20assistidas.html">
+	<area shape=rect coords="679,1381,700,1416" href="aulas%20assistidas%20em%20geografias.html">
+	<area shape=rect coords="780,1274,807,1301" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="577,839,716,873" href="Assuntos%20dominados%20aluno%20-%20geografia.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
+	<area shape=rect coords="779,1238,995,1265" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=poly coords="495,157,482,157,482,170,495,170,495,157,490,164,493,166,491,168,488,165,486,168,484,166,487,164,484,161,486,159,488,162,491,159,493,161,495,157,490,164" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
 	<area shape=poly coords="356,155,343,155,343,167,356,167,356,155,351,161,354,164,352,166,350,163,347,166,345,164,348,161,345,158,347,156,350,159,352,156,354,158,356,155,351,161" href="Filtros%20aplicados%20Geografia.html">
 </map>
