--- a/prototipo_escolas/arquivos/Filtros aplicados Geografia.html
+++ b/prototipo_escolas/arquivos/Filtros aplicados Geografia.html
@@ -1,10 +1,12 @@
 <map name="GraffleExport">
 	<area shape=rect coords="73,1374,322,1409" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
 	<area shape=rect coords="806,73,995,112" href="Filtros%20Escola.html">
+	<area shape=poly coords="903,1284,897,1294,891,1284,903,1284" href="Dashboard%20Escola%20Engajamento.html">
+	<area shape=rect coords="769,1216,1018,1285" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="48,1742,966,1820" href="Filtros%20Escola.html">
-	<area shape=rect coords="889,1294,916,1321" href="Dashboard%20Escola.html">
+	<area shape=rect coords="889,1294,916,1321" href="Dashboard%20Escola%20Engajamento.html">
 	<area shape=rect coords="633,1277,966,1352" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
-	<area shape=rect coords="342,839,460,873" href="Filtros%20aplicados%201%C2%BA%20Ano%20C.html">
+	<area shape=rect coords="342,839,460,873" href="Filtros%20aplicados%201%C2%BA%20Ano%20C%20-%20GEOGRAFIA.html">
 	<area shape=rect coords="0,1,1024,46" href="Dashboard%20Escola.html">
 	<area shape=rect coords="253,144,369,181" href="Dashboard%20Escola.html">
 </map>
