--- a/prototipo_redes/arquivos/Dashboard Rede Filtrado.html
+++ b/prototipo_redes/arquivos/Dashboard Rede Filtrado.html
@@ -1,5 +1,6 @@
 <map name="GraffleExport">
-	<area shape=poly coords="422,97,413,110,405,97,422,97" href="Colegio%20Eldorado-Drowpdown.html">
+	<area shape=rect coords="804,76,993,115" href="Dashboard%20Rede%20Filtrado.html">
+	<area shape=poly coords="422,97,413,110,405,97,422,97" href="Dashboard%20Rede.html">
 	<area shape=rect coords="106,76,482,125" href="Colegio%20Eldorado-Drowpdown.html">
 	<area shape=rect coords="0,0,1024,45" href="Dashboard%20Rede.html">
 </map>
